--- a/.github/workflows/release-v6.yaml
+++ b/.github/workflows/release-v6.yaml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r enable-v6/requirements.txt
           pip install pyinstaller
 
       - name: Get the version
